Formatting/Organization, use Math.clamp